--- a/pyproject.toml
+++ b/pyproject.toml
@@ -85,6 +85,9 @@ testpaths = "test"
 filterwarnings = "error"
 
 [tool.pytest.ini_options]
+asyncio_default_fixture_loop_scope = "function"
+
+[tool.pytest.ini_options]
 markers = [
   "slow: marks tests as slow (deselect with '-m \"not slow\"')",
   "serial",
